# baseline_bots

./: .buildinfo  .dockerignore  .editorconfig  .gitignore  .gitmodules  .markdownlint.yaml  .pre-commit-config.yaml  .pre-commit-config.yml  .prettierrc.yaml  .python-version  .shellcheckrc  .yamllint.yaml  Dockerfile  GamePlayFramework.json  LICENSE  LSP_RUSTUR_1.json  LSP_RUSTUR_test.json  Makefile  ProposerBot.json  README.md  RealPolitik.json  RealPolitik1.json  analysis_bot.py  analysis_bot_v2.py  analysis_script-0.job  analysis_script-1.job  analysis_script-10.job  analysis_script-2.job  analysis_script-3.job  analysis_script-4.job  analysis_script-5.job  analysis_script-6.job  analysis_script-7.job  analysis_script-8.job  analysis_script-9.job  analysis_script.job  analysis_script.py  analyze_bots.py  analyze_dipbots.py  baseline_bot.py  (+30 more)
.doctrees/: bots.doctree  containerization.doctree  development.doctree  environment.pickle  index.doctree  random_order_mod.doctree  utils.doctree
.github/workflows/: CI.yml  checks.yaml  gh-pages.yml  pre-commit.yml
Analysis/: DipNetBot.json  LSP_RUSTUR.json  LSP_RUSTUR_0.json  LSP_RUSTUR_1.json  LSP_RUSTUR_10.json  LSP_RUSTUR_11.json  LSP_RUSTUR_12.json  LSP_RUSTUR_13.json  LSP_RUSTUR_14.json  LSP_RUSTUR_15.json  LSP_RUSTUR_16.json  LSP_RUSTUR_17.json  LSP_RUSTUR_18.json  LSP_RUSTUR_19.json  LSP_RUSTUR_2.json  LSP_RUSTUR_20.json  LSP_RUSTUR_21.json  LSP_RUSTUR_22.json  LSP_RUSTUR_23.json  LSP_RUSTUR_24.json  LSP_RUSTUR_25.json  LSP_RUSTUR_26.json  LSP_RUSTUR_27.json  LSP_RUSTUR_28.json  LSP_RUSTUR_29.json  LSP_RUSTUR_3.json  LSP_RUSTUR_30.json  LSP_RUSTUR_31.json  LSP_RUSTUR_32.json  LSP_RUSTUR_33.json  LSP_RUSTUR_34.json  LSP_RUSTUR_35.json  LSP_RUSTUR_36.json  LSP_RUSTUR_37.json  LSP_RUSTUR_38.json  LSP_RUSTUR_39.json  LSP_RUSTUR_4.json  LSP_RUSTUR_40.json  LSP_RUSTUR_41.json  LSP_RUSTUR_42.json  (+265 more)
Analysis/.ipynb_checkpoints/: analyse_results-checkpoint.ipynb
BotMovesAnalysis/: LSP_orders_set_RUSSIA_2022_06_21-18:19:05.json  LSP_orders_set_RUSSIA_2022_06_21-18:38:31.json  LSP_orders_set_RUSSIA_2022_06_21-18:44:52.json  LSP_orders_set_RUSSIA_2022_06_22-08:22:39.json  LSP_orders_set_TURKEY_2022_06_21-18:13:10.json  LSP_orders_set_TURKEY_2022_06_21-18:19:06.json  LSP_orders_set_TURKEY_2022_06_21-18:38:32.json  LSP_orders_set_TURKEY_2022_06_21-18:44:53.json  LSP_orders_set_TURKEY_2022_06_22-08:22:40.json  run2.json  run_1.json
GameAnalysisFiles/: All_dip_Aus_Ita_2022_04_08-16:17:21.json  All_dip_Eng_Fra_2022_04_08-16:17:21.json  All_dip_Fra_Eng_2022_04_08-16:17:21.json  All_dip_Ger_Ita_2022_04_08-16:17:21.json  All_dip_Ger_Ita_2022_04_11-22:00:48.json  All_dip_Tur_Eng_2022_04_13-22:34:01.json  All_rand_Eng_dip_2022_04_08-14:47:39.json  Dip_LSP_VS_NP_AUS_ITA_BotGame_2022_04_08-11:52:35.json  Dip_vs_Rand_BotGame_2022_04_08-08:10:32.json  n_comms_game_analysis_2022_04_08-08:10:32.csv  n_comms_game_analysis_2022_04_08-11:52:35.csv  n_comms_game_analysis_2022_04_08-14:47:39.csv  n_comms_game_analysis_2022_04_08-16:17:21.csv  n_comms_game_analysis_2022_04_08-20:34:01.csv  n_comms_game_analysis_2022_04_12-00:28:41.csv  n_comms_game_analysis_2022_04_12-01:55:05.csv  n_comms_game_analysis_2022_04_12-02:56:45.csv  n_comms_game_analysis_2022_04_12-20:34:01.csv  n_comms_game_analysis_2022_04_13-22:34:01.csv  n_comms_game_analysis_2022_04_16-22:34:01.csv
_sources/: bots.rst.txt  development.rst.txt  index.rst.txt  utils.rst.txt
bots/: baseline_bot.py  index.html  loyal_bot.py  press_dip_bot.py  pushover_bot.py  rand_dip.py  random_allier_proposer_bot.py  random_honest_bot.py  random_honest_order_accepter_bot.py  random_loyal_support_proposal.py  random_loyal_supportproposal.py  random_no_press.py  random_proposer_bot.py  random_stance_bot.py  random_support_proposer_bot.py
bots/RL/: DiplomacyEnv.py  RLOrderBot.py  RLProposerBot.py
bots/RL/models/: a2c_actor_diplomacy_ep_1_v1  (+29 more)
bots/dipnet/: DipNetProposerBot.json  RealPolitik.py  dipnet_bot.py  dipnet_proposer_bot.py  loyal_support_proposal.py  no_press.py  no_press_bot.py  pushoverdipnet.py  random_loyal_supportproposal_dip.py  selectively_transparent_bot.py  transparent_bot.py  transparent_proposer_bot.py
containerization/: index.html
containers/: run.sh  run_bot.py
containers/allan_dip_bot/: BUILD.md  Dockerfile  generate_batch_file.sh  models.config  run.sh  run_bot.py  run_dipnet.py  run_model_server.sh
containers/allan_test_env/: BUILD.md  Dockerfile  run.sh  run_bot.py
containers/test_env/: run.sh  run_bot.py  run_model_server.sh
development/: index.html
docs/: bots.rst  conf.py  containerization.rst  development.rst  index.rst  random_order_mod.rst
docs/source/: bots.rst  conf.py  containerization.rst  development.rst  index.rst  random_order_mod.rst  utils.rst
game_files/: test_game_file.json
genindex/: index.html
random_order_mod/: index.html
scripts/: README.md  analyse_results.ipynb  analyse_script.py  analysis_script.py  baseline_exp_executor.job  baseline_exp_executor.py  baseline_exp_executor_offline.py  baseline_exp_executor_offline.sh  batch.txt  botgame_launcher_dipnet.py  botgame_launcher_nondipnet.py  config.json  config_template.json  create_game.py  dip_ui_bot_launcher.py  download_game.py  game_runner.sh  generate_sbatch.py  run_antony.sh  run_bot.py  run_cicero.sh  run_game.py  run_games.py  run_games.sh  save_game_files.py  scrimmage_runner.sh
search/: index.html
src/: __init__.py
src/baseline_bots/: __init__.py  game_utils.py  parsing_utils.py  randomize_dipnet.py  randomize_order.py  utils.py
src/bots/: __init__.py  pushover_bot.py  random_honest_bot.py  random_honest_order_accepter_bot.py  random_no_press.py  random_stance_bot.py
src/chiron_utils/: game_utils.py  parsing_utils.py  randomize_order.py
stance/: stance_extraction.py
tests/: __init__.py  bots_test.py  randomize_dipnet_test.py  randomize_order_test.py  utils_test.py
tests/bot_tests/: SOA_test.py  bots_test.py  dipnet.py  gameplay_framework.py  gameplay_framework_async.py  simple_SOA_test.py  soa_bot_functions_test.py  soa_test.py
utils/: index.html
(+72 files in other folders)
