[build-system]
requires = ["setuptools>=62.6"] # Minimum version required to use `file:` with `install_requires`
build-backend = "setuptools.build_meta"

[tool.black]
target-version = ["py37"]

[tool.isort]
py_version = "37"
atomic = true
combine_as_imports = true
force_sort_within_sections = true
profile = "black"

[tool.codespell]
ignore-regex = "\\[nt]" # Do not count escaped newlines or tabs as part of a word
ignore-words-list = "ans,hel,opps,ser,vie"  # "HEL", "SER", and "VIE" are from DAIDE
quiet-level = 0 # Display all warnings
check-filenames = ""
check-hidden = ""

[tool.pytest.ini_options]
addopts = "--verbosity=2"
filterwarnings = [
  "ignore::DeprecationWarning",
]

[tool.mypy]
files = "."
exclude = "^data/"
show_error_codes = true
ignore_missing_imports = true
python_version = "3.7"
#strict = true
#warn_unreachable = true
