[build-system]
requires = ["setuptools>=62.6"] # Minimum version required to use `file:` with `install_requires`
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 100
target-version = ["py37"]

[tool.codespell]
ignore-regex = "\\[nt]" # Do not count escaped newlines or tabs as part of a word
ignore-words-list = "astroid,ans,hel,opps,ser,vie"  # "HEL", "SER", and "VIE" are from DAIDE
quiet-level = 0 # Display all warnings
check-filenames = ""
check-hidden = ""

[tool.mypy]
show_error_codes = true
ignore_missing_imports = true
python_version = "3.7"
strict = true
warn_unreachable = true

[tool.ruff]
fix = true
line-length = 100
show-fixes = true
target-version = "py37"

[tool.ruff.lint]
select = [
  "A", # flake8-builtins
  "ASYNC", # flake8-async
  "B", # flake8-bugbear
  "BLE", # flake8-blind-except
  "C4", # flake8-comprehensions
  # "CPY", # flake8-copyright (will require spdx changes)
  # "D", # pydocstyle
  "DTZ", # flake8-datetimez
  "E", # pycodestyle error
  "F", # pyflakes
  "FBT", # flake8-boolean-trap
  "FLY", # flynt
  # "FURB", # refurb
  "G", # flake8-logging-format
  "I", # isort
  "ICN", # flake8-import-conventions
  "INP", # flake8-no-pep420
  "INT", # flake8-gettext
  "ISC", # flake8-implicit-str-concat
  "LOG", # flake8-logging
  "N", # pep8-naming
  "NPY", # NumPy-specific rules
  # "PERF", # Perflint
  "PIE", # flake8-pie
  "PT", # flake8-pytest-style
  "PTH", # flake8-use-pathlib
  "PYI", # flake8-pyi
  # "RET", # flake8-return
  "RSE", # flake8-raise
  "RUF", # Ruff-specific rules
  "S", # flake8-bandit (but very selective, it's very picky!)
  "SIM", # flake8-simplify
  "SLF", # flake8-self
  "SLOT", # flake8-slots
  "T10", # flake8-debugger
  # "TCH", # flake8-type-checking
  "TID", # flake8-tidy-imports
  # "TRY", # tryceratops
  "UP", # pyupgrade
  "W", # pycodestyle warning
  "YTT", # flake8-2020
]
ignore = [
  # Do not switch to `Path.open()` because `open()` is easier to test with
  # e.g., `open(data_dir / "file_a.txt")` -> `open("test/file_b.txt")`
  "PTH123", # builtin-open (from flake8-use-pathlib)
  # TODO: Write explanation
  "S101", # assert (from flake8-bandit)
  # TODO: Write explanation
  "S311", # suspicious-non-cryptographic-random-usage (from flake8-bandit)
  # TODO: Write explanation
  "SIM108", # if-else-block-instead-of-if-exp (from flake8-simplify)
]

[tool.ruff.lint.per-file-ignores]
# Ignore `INP001` (implicit-namespace-package) in `test/` directory because pytest recommends
# not using `__init__.py` files: https://docs.pytest.org/en/7.4.x/explanation/goodpractices.html
"tests/**.py" = ["INP001"]

[tool.ruff.lint.isort]
combine-as-imports = true
force-sort-within-sections = true
known-first-party = ["baseline_bots"]

[tool.ruff.lint.pycodestyle]
# Detect extra-long lines that Black can't handle
max-line-length = 250

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.pylint.format]
# Let other tools handle line length
max-line-length = 250

[tool.pylint.imports]
# Need to either set this or stop using the `import X as X` that mypy wants
allow-reexport-from-package = true

[tool.pylint.messages_control]
# Most of these are disabled to prevent issues with dependencies being difficult to inspect
# pylint FAQ recommends disabling:
# - `wrong-import-order` when using `isort`
# - `missing-module-docstring`, `missing-class-docstring`,
#   `missing-function-docstring` when using `pydocstyle`
# Disabled `consider-using-f-string` because handled by `pyupgrade`
# Disabled `logging-not-lazy` because handled by `flake8-logging-format`
# Disabled `broad-exception-caught` because handled by `flake8-blind-except`
disable = """
R,fixme,no-member,unsupported-membership-test,unsubscriptable-object,
unsupported-assignment-operation,not-an-iterable,too-many-lines,wrong-import-order,
missing-module-docstring,missing-class-docstring,missing-function-docstring,
consider-using-f-string,logging-not-lazy,broad-exception-caught
"""

[tool.pylint.reports]
score = false

[tool.pytest.ini_options]
addopts = "--verbosity=2"
filterwarnings = [
  "ignore::DeprecationWarning",
]
