[metadata]
name = baseline_bots
version = 0.0.1
description = Baseline bots built by ALLAN
long_description = file: README.md
long_description_content_type = text/markdown
url = NO
author = ALLAN
author_email = sanderschulhoff@gmail.com
classifiers =
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3

[options]
packages = find:
python_requires = >=3.7

[options.packages.find]
where = src
