[metadata]
name = chiron_utils
version = 0.0.1
description = CHIRON advisors and library for CHIRON utilities
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ALLAN-DIP/chiron-utils
author = ALLAN
license = MIT
license_files = LICENSE
classifiers =
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Topic :: Games/Entertainment
    Topic :: Games/Entertainment :: Board Games
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Artificial Intelligence

[options]
packages = find:
install_requires = file: requirements.txt
python_requires = >=3.7

[options.packages.find]
where = src
